--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -35,10 +35,15 @@
             -webkit-user-select: none;
             -ms-user-select: none;
             -moz-user-select: none;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         &--disabled {
-            background-color: #e9e9e9;
+            background-color: #f2f2f2;
         }
         &--disabled:hover {
             border-color: #B4BDC3;
