--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,6 +6,14 @@
     width: 100%;
     padding: variables.$gap 0;
 
+    &__logo-img {
+      transition: transform 0.3s ease;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
     &__container {
         @include mixins.container {
             display: grid;
