--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -25,11 +25,8 @@ $icons-color: #B4BDC3;
 $elements-color: #E2E6E9;
 $hover-color: #FAFBFC;
 $bg-color: #FFFFFF;
-<<<<<<< HEAD
 $disable-button-color: #F2F2F2;
-=======
 $shadow-color: #216bff2f;
->>>>>>> c2775a5aa953b05b6f76724809e668496b11913d
 
 // FONTS
 
@@ -83,4 +80,10 @@ $counter-height: 2rem;
 
 $buttons-width: 5rem;
 $buttons-height: 2rem;
+
+// CRISPS SIZE
+
+$crumb-bottom-pading: 2.5rem;
+$crumb-gap: 0.5rem;
+$crumb-size: 1rem;
 
