--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,7 +11,8 @@ $dropdown-width: 250px;
 
 // ANIMATIONS CONSTANTS
 
-$fast-animation-duration: 200ms;
+$fast-animation-duration: 0.2s;
+$effectDuration: 0.3s;
 
 // COLORS
 
@@ -77,11 +78,15 @@ $header-size: 64px;
 $counter-width: 6rem;
 $counter-height: 2rem;
 
+// CRISPS SIZE
+
+$crumb-bottom-pading: 2.5rem;
+$crumb-gap: 0.5rem;
+$crumb-size: 1rem;
+
 // BUTTONS SIZES
 
 $buttons-width: 5rem;
 $buttons-height: 2rem;
 
-// ANIMATION
 
-$effectDuration: 0.3s;
