--- a/src/components/pages/CatalogPage/CatalogPage.scss
+++ b/src/components/pages/CatalogPage/CatalogPage.scss
@@ -1,8 +1,12 @@
 @use './../../../styles/variables.scss' as variables;
 @use './../../../styles/mixins/mixins.scss' as mixins;
 
-.category {
-  &__grid {
+
+.catalog-page {
+  &__filters {
+    display: flex
+  }
+  &__category {
     @include mixins.container;
   
     display: grid;
@@ -22,5 +26,6 @@
     @include mixins.on-desktop {
       grid-template-columns: repeat(4, 1fr);
     }
-  }
 }
+}
+
